corrected an issue with scrollbars creating whitespace in larger display sizes

--- a/css/styles.css
+++ b/css/styles.css
@@ -117,13 +117,18 @@ header {
     and the header at full screen, but puts a margin for the projects.
 *****************************************************************************/
 
-@media screen and (min-width: 500px) and (max-width: 999px){
+@media screen and (min-width: 600px) and (max-width: 999px){
 
     .project {
         width: 80%;
         margin-left: auto;
         margin-right: auto;
     }
+
+        article {
+        overflow: hidden;;
+    }
+
 
 }
 
@@ -145,6 +150,10 @@ header {
 
     header {
         flex-wrap: nowrap;
+    }
+
+    article {
+        overflow: hidden;;
     }
 
     #logo {
